--- a/univisia/src/app/navigation/mini-main-navigation/mini-main-navigation.component.html
+++ b/univisia/src/app/navigation/mini-main-navigation/mini-main-navigation.component.html
@@ -1,19 +1,19 @@
 <img src="../../../assets/images/menu_icon.svg" alt=""
     *ngIf="!menuOpen" (click)="menuOpen = !menuOpen">
 
-<div class="open-menu" *ngIf="menuOpen">
+<div class="open-menu" *ngIf="menuOpen" [@enterAnimation]>
     <div class="top">
-        <img src="../../../assets/images/menu.svg" alt="">
+        <img class="menu-img" src="../../../assets/images/menu.svg" alt="">
         <img src="../../../assets/images/close.svg" alt="" (click)="menuOpen = !menuOpen">
     </div>
     <div class="menu-container">
-        <div class="menu-item">
+        <div class="menu-item" (click)="menuOpen = !menuOpen">
             <h4><a routerLinkActive="active" routerLink="/services" class="essentials">Servises</a></h4>
-            <div class="options">
-                <h5>Azure Services</h5>
-                <h5>Website Development</h5>
-                <h5>Service for Startups</h5>
-                <h5>IT Stuffing</h5>
+            <div class="options" (click)="goToService($event.target)">
+                <h5 id="azure" >Azure Services</h5>
+                <h5 id="webdev">Website Development</h5>
+                <h5 id="startups">Service for Startups</h5>
+                <h5 id="stuffing">IT Stuffing</h5>
             </div>
         </div>
         <div class="menu-item" (click)="menuOpen = !menuOpen">
