--- a/univisia/src/app/pages/cases-pages/cases-page/cases-page.component.html
+++ b/univisia/src/app/pages/cases-pages/cases-page/cases-page.component.html
@@ -1,8 +1,8 @@
 <div class="cases-container">
-    <div class="cases" *ngFor="let case of cases; let idx = index" [@enterAnimation]>
+    <div class="cases" *ngFor="let case of cases; let idx = index">
         <div class="description">
             <h4 class="pointer" (click)="showContent = idx" [ngClass]="{active: showContent === idx}">{{ case.project }}</h4>
-            <div [@inOutAnimation] *ngIf="showContent === idx">
+            <div [@toggle] *ngIf="showContent === idx">
                 <div class="facts">
                     <div class="title">
                         <p class="text-orange">Client</p>
@@ -25,7 +25,7 @@
             </div>
         </div>
         <ng-container *ngIf="showContent === idx">
-            <div class="case-img" [ngStyle]="{'background-image': 'url('+case.image+')' || ''}"></div>
+            <div [@toggle] class="case-img" [ngStyle]="{'background-image': 'url('+case.image+')' || ''}"></div>
         </ng-container>
     </div>
 </div>
