--- a/univisia/src/app/pages/cases-pages/cases-page/cases-page.component.scss
+++ b/univisia/src/app/pages/cases-pages/cases-page/cases-page.component.scss
@@ -26,7 +26,7 @@ h4 {
         height: 35px;
         width: 7px;
         margin-left: -60px;
-        margin-right: 45px;
+        margin-right: 53px;
         background-repeat: no-repeat;
         background-size: contain;
     }
@@ -43,4 +43,5 @@ h4 {
 .detailed {
     padding-bottom: 30px;
     padding-left: 55px;
+    text-align: justify;
 }
