--- a/univisia/src/app/pages/main-pages/mini-main-page/mini-main-page.component.html
+++ b/univisia/src/app/pages/main-pages/mini-main-page/mini-main-page.component.html
@@ -1,6 +1,5 @@
 <div class="azure-services"></div>
-
-<div class="azure-description">
+<div class="azure-description" id="azure-s">
     <h4><span class="text-orange">Azure &nbsp; </span>services</h4>
     <div class="details">
         <h5>We practice Azure because <span class="text-orange">we are Azure believers.</span></h5>
@@ -12,7 +11,7 @@
     </div>
 </div>
 
-<div class="webdev">
+<div class="webdev" id="webdev-s">
     <img src="../../../../assets/images/wesites_cut.png" alt="">
     <h4>Website development</h4>
     <div class="details">
@@ -24,7 +23,7 @@
     </div>
 </div>
 
-<div class="startups">
+<div class="startups" id="startups-s">
     <img src="../../../../assets/images/microsoft_cut.png" alt="">
     <h4>Services for startups</h4>
     <div class="details">
@@ -37,7 +36,7 @@
     </div>
 </div>
 
-<div class="stuffing">
+<div class="stuffing" id="stuffing-s">
     <img src="../../../../assets/images/stuffing_cut.png" alt="">
     <h4>IT stuffing</h4>
     <div class="details">
