--- a/univisia/src/app/pages/about-page/about-page.component.scss
+++ b/univisia/src/app/pages/about-page/about-page.component.scss
@@ -24,6 +24,7 @@
         
         p {
             font-size: 14px;
+            text-align: justify;
         }
     }
 
@@ -100,7 +101,7 @@
     }
 
     h4 {
-        margin: 100px 0 30px 0;
+        margin: 120px 0 30px 0;
         width: 100%;
     }
 
