--- a/univisia/src/app/pages/cases-pages/mini-cases-page/mini-cases-page.component.scss
+++ b/univisia/src/app/pages/cases-pages/mini-cases-page/mini-cases-page.component.scss
@@ -1,8 +1,13 @@
 @import "../../../../styles.scss";
 
 
+.cases-container {
+    position: relative;
+    margin-bottom: 100px;
+}
+
 h5 {
-    margin: 15px 0;
+    margin: 0 0 15px 0;
 }
 
 .facts {
@@ -12,7 +17,7 @@ h5 {
     column-gap: 15px;
     padding-bottom: 20px;
     border-bottom: 2px solid black;
-margin-bottom: 15px;
+    margin-bottom: 15px;
 }
 
 .case-img {
@@ -20,33 +25,35 @@ margin-bottom: 15px;
     margin-bottom: 25px;
 }
 
-.buttons {
+.detailed {
+    text-align: justify;
+}
+
+.arrow-btn {
+    font-size: 40px;
+    border: none;
+    background-color: white;
+    border-radius: 20px;
     display: flex;
-    justify-content: flex-end;
-
-    .arrow-btn {
-        margin-top: 30px;
-        font-size: 40px;
-        border: none;
-        background-color: transparent;
-        display: flex;
-        align-items: center;
-        transition: color $transition;
-        padding: 0;
-        
-        img {
-            margin-right: 20px;
-            width: 25px;
-        }
+    align-items: center;
+    transition: color $transition;
+    padding: 15px 20px;
+    position: fixed;
+    bottom: 55px;
+    right: 20px;
     
-        &:hover {
-            color: $orange;
-        }
+    img {
+        margin-right: 20px;
+        width: 25px;
+    }
 
-        &.next {
-            img {
-                transform: rotate(180deg);
-            }
+    &:hover {
+        color: $orange;
+    }
+
+    &.next {
+        img {
+            transform: rotate(180deg);
         }
     }
 }
