--- a/univisia/src/app/pages/contact-page/contact-page.component.html
+++ b/univisia/src/app/pages/contact-page/contact-page.component.html
@@ -14,7 +14,7 @@
             <textarea placeholder="Text" class="free-text" maxlength="300" formControlName="notes"></textarea>
             <button class="black-btn" type="submit">Send</button>
         </form>
-        <img class="contact-bg bg-img" src="../../../assets/images/contact_bg.png" alt="">
+        <div class="contact-bg bg-img"></div>
     
         <!-- address  -->
         <div class="address">
