--- a/univisia/src/app/pages/main-pages/main-page/main-page.component.scss
+++ b/univisia/src/app/pages/main-pages/main-page/main-page.component.scss
@@ -28,6 +28,7 @@ h2, .service-description, .black-btn {
     flex-wrap: wrap;
     padding-left: 50px;
     cursor: pointer;
+    width: 100%;
     
     h2 {
         margin: 0 15px 0 0;
