--- a/univisia/src/app/app.component.html
+++ b/univisia/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 
-<div class="content">
+<div class="content" [ngClass]="{'fit-menu': pageSizeIfMenuOpen !== 'fit-content'}">
     <router-outlet></router-outlet>
 </div>
