--- a/univisia/src/app/pages/about-page/about-page.component.scss
+++ b/univisia/src/app/pages/about-page/about-page.component.scss
@@ -3,7 +3,6 @@
 
 .big-screens {
     position: relative;
-    padding-top: 50px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -15,12 +14,16 @@
         font-family: "Tunnels";
         color: $silver;
         font-size: 42rem;
-        top: 100px;
+        top: -40px;
         white-space: nowrap;
     }
 
     .intro {
         width: 38%;
+
+        h1 {
+            font-size: 100px;
+        }
         
         p {
             font-size: 14px;
@@ -32,7 +35,7 @@
         width: calc(55% - 100px);
         display: grid;
         height: fit-content;
-        row-gap: 55px;
+        row-gap: 45px;
         margin-right: 100px;
         margin-top: 30px;
 
@@ -101,7 +104,7 @@
     }
 
     h4 {
-        margin: 120px 0 30px 0;
+        margin: 50px 0 30px 0;
         width: 100%;
     }
 
